themes/skyblue/css/node.css
/* Default node style */
.node {
  clear:both;
  background:url(../images/notebook_bg.png) 0 0 repeat-y;
  -moz-box-shadow: 0 1px 4px rgba(0,0,0,0.2);
  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.2);
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
}
  .node h1.title {
    font-size:2.3em;
    font-weight:normal;
    text-shadow:none;
    padding:20px 0;
    margin:0;
  }

.node-content {
  font-family: LatinModernRoman10Regular, "Times New Roman", Times, serif;
  font-size:14px;
  line-height:1.6em;
}

.node-body {
  padding:0 0 30px 0;
}

  .node-body a {
    text-decoration:none;
    background-color:#D1DCDF;
  }
    .node-body a:hover {
      background-color:#333;
      color:#fff;
    }
    
.post-date {
  font-family: Georgia, "Times New Roman", Times, serif; 
  float:right;
  font-size:1.3em;
  color:#fff;
  text-shadow: 0.4px 0.3px 2px rgba(0,0,0,0.2);
  margin:0;
  padding:0 0 5px 0;
}
.page-content {
  position:relative;
}
  .field-animal-picture {
    position:absolute;
    top:200px;
    right:-264px;
    z-index:1;
  }
    .node .node-content .field-animal-picture img {
      border:0;
    }

/* Image */
.field-video,
.field-first-image {
  width:auto;
  display:inline;
  float:left;
  margin:0;
}
  .field-video {
    margin: 0 30px 5px 0;
  }
  .node .node-content img,
  .field-first-image img {
    /* border:1px solid #222; */
  }

.field-video {
  margin:0 0 2em 0;
}  

/* node content */
.node blockquote {
  min-height:30px;
  margin:0 0 20px -10px;
  padding:10px 30px 10px 100px;
  background: #e5e5e5 url(../images/blockquote_left.png) no-repeat 0 0;
  background: rgba(0, 0, 0, 0.1) url(../images/blockquote_left.png) no-repeat 0 0;
}
.node .node-content blockquote p:last-of-type {
  margin-bottom:0;
  padding-bottom:0;
}
.node .node-content h3 {
  margin:30px 0 20px 0;
}

/* Right column topics */
#block-views-node-content-block-2 {
  padding:10px 0;
  clear:both;
  font-family: 'NotethisRegular', Georgia, "Times New Roman", Times, serif;
  font-size:16px;
}  
#block-views-node-content-block-2 h3 a{
  font-family: 'NotethisRegular', Georgia, "Times New Roman", Times, serif;
  font-size:1.1em;
  line-height:1em;
  text-decoration:none;
  display:block;
  width:auto;
  padding:0 15px;
  color:#333;
}
  
#block-views-node-content-block-2 ul.item-list {
  margin:0;
  padding:0;
}
  #block-views-node-content-block-2 ul.item-list li {
    margin:0 30px;
    padding:5px 0;
  }
  #block-views-node-content-block-2 ul.item-list a {
    text-decoration:none;
    color:#333;
    color:rgba(0,0,0,0.7);
    padding:0;
    display:block;
  }
  #block-views-node-content-block-2 ul.item-list li a:hover {
    text-decoration:underline;
  }

